--- a/app/assets/stylesheets/tenon/layout/main-nav.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav.scss
@@ -1,6 +1,4 @@
 .main-nav {
-  @extend .blue-grey.darken-3;
-  @include transition(transform 0.25s ease);
   @include transform(translate(-$main-nav-width, 0));
   position: fixed;
   top: 0;
@@ -8,13 +6,14 @@
   z-index: 998;
   width: $main-nav-width;
   height: 100%;
+  background-color: $main-nav-bg-color;
 
   li {
     padding: 5px 10px;
   }
 
   a {
-    @extend .white-text;
+    color: $main-nav-fg-color;
   }
 
   i {
@@ -22,9 +21,11 @@
   }
 }
 
-.nav-pusher {
-  @extend .grey.lighten-4;
+.main-nav, .nav-pusher, .util-nav {
   @include transition(all 0.25s ease);
+}
+
+.nav-pusher {
   position: relative;
   min-height: 100vh;
 }
@@ -34,8 +35,7 @@
     @include transform(translate(0, 0));
   }
 
-  .nav-pusher {
+  .nav-pusher, .util-nav {
     @include transform(translate($main-nav-width, 0));
-    opacity: .7;
   }
 }
