Basic record list stuff

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -13,6 +13,7 @@
 @import './helpers/font-size';
 @import './helpers/fonts';
 @import './helpers/transitions';
+@import './helpers/z-depth';
 
 // UI ELEMENTS
 @import './ui/burger';
@@ -23,6 +24,7 @@
 @import './layout/main';
 @import './layout/main-nav';
 @import './layout/util-nav';
+@import './layout/record-list';
 //@import './layout/tenon-content/base';
 //@import './layout/tenon-content/library';
 //@import './layout/tenon-content/popped-out';
