--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -30,6 +30,7 @@ $box-label: #04555d;
 // Misc.
 $body-bg-color: $off-white;
 $main-bg-color: $white;
+$light-border-color: $light-grey;
 
 // Sidebar
 $sidebar-bg-color: #242133;
