--- a/app/assets/stylesheets/tenon/helpers/font-size.scss
+++ b/app/assets/stylesheets/tenon/helpers/font-size.scss
@@ -20,3 +20,12 @@ $default-font-size: 18;
   @include line-height($line-height, $font-size);
   letter-spacing: $letter-spacing;
 }
+
+@mixin font-size-h1 { @include font($h1-size, $h1-line-height); }
+@mixin font-size-h2 { @include font($h2-size, $h2-line-height); }
+@mixin font-size-h3 { @include font($h3-size, $h3-line-height); }
+@mixin font-size-h4 { @include font($h4-size, $h4-line-height); }
+@mixin font-size-h5 { @include font($h5-size, $h5-line-height); }
+@mixin font-size-h6 { @include font($h6-size, $h6-line-height); }
+@mixin font-size-smaller { @include font($smaller-size, $smaller-line-height); }
+@mixin font-size-smallest { @include font($smallest-size, $smallest-line-height); }
