--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -1,7 +1,7 @@
 // Use American 'color' in variable names for consistency with CSS keywords.
 
 // Named colors
-$light-grey: #e2e2e2;
+$light-grey: #d9d9d9;
 $med-grey: #c2c2c2;
 $grey: #ababab;
 $dark-grey: #878787;
@@ -12,11 +12,11 @@ $off-white: #f9f9f9;
 $cobalt: #12111a;
 $orange: #df222a;
 $purple: #978fcc;
-$minty: #4E8865;
+$blue: #199eff;
 
 // Reusable colors
 $client-color: $orange;
-$primary-color: $minty;
+$primary-color: $blue;
 $comp-color: $purple;
 $highlight-color: $med-grey;
 
@@ -24,13 +24,12 @@ $highlight-color: $med-grey;
 $primary-text-color: $slate;
 $body-text-color: $black;
 $link-color: $primary-color;
-$label: #162433;
-$box-label: #04555d;
+$label-color: #162433;
 
 // Misc.
-$body-bg-color: $off-white;
-$main-bg-color: $white;
-$light-border-color: $light-grey;
+$body-bg-color: $light-grey;
+$panel-bg-color: $white;
+$light-border-color: $med-grey;
 
 // Sidebar
 $sidebar-bg-color: #242133;
