--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -1,3 +1,29 @@
+// Block-Level
 $default-spacing: 30px;
 $util-nav-height: 50px;
 $main-nav-width: 250px;
+
+// Typography
+$h1-size: 56;
+$h1-line-height: 70;
+
+$h2-size: 38;
+$h2-line-height: 40;
+
+$h3-size: 24;
+$h3-line-height: 30;
+
+$h4-size: 18;
+$h4-line-height: 24;
+
+$h5-size: 16;
+$h5-line-height: 20;
+
+$h6-size: 14;
+$h6-line-height: 20;
+
+$smaller-size: 14;
+$smaller-line-height: 20;
+
+$smallest-size: 12;
+$smallest-line-height: 20;
