--- a/app/assets/stylesheets/tenon/ui/form-inputs.scss
+++ b/app/assets/stylesheets/tenon/ui/form-inputs.scss
@@ -33,6 +33,8 @@ form {
   textarea,
   .editable-text {
     @include font-size-smaller;
+    height: auto;
+    min-height: 44px;
   }
 
   label {
