--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -21,8 +21,8 @@
 
   .tn-tc-wrap
     .tn-tc-sizes
-      %h2 Preview Mode
-      %p
+      %h4 Preview Mode
+      .explanation
         Use preview mode to see how your content will look on different devices.  You can still make edits when you're in preview mode, but the toolbars are hidden to give you a better picture of how your content will be laid out.
       = tenon_content_sizes
       = link_to 'Done', '#', class: 'tn-tc-pop-out-close btn btn-comp'
