--- a/app/assets/stylesheets/tenon/ui/panel.scss
+++ b/app/assets/stylesheets/tenon/ui/panel.scss
@@ -1,7 +1,14 @@
 .panel {
   @include z-depth-1;
-  border-radius: 4px;
+  position: relative;
+  border-radius: $default-border-radius;
   background-color: $panel-bg-color;
   padding: $default-spacing;
   margin-bottom: $default-spacing;
+
+  .btn-floating {
+    position: absolute;
+    right: $default-spacing;
+    top: -$btn-floating-size / 2;
+  }
 }
