--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -1,11 +1,13 @@
 // Block-Level
 $default-spacing: 30px;
 $util-nav-height: 50px;
-$main-nav-width: 250px;
+$main-nav-width: 180px;
+$default-border-radius: 4px;
+$btn-floating-size: 55px;
 
 // Typography
-$h1-size: 56;
-$h1-line-height: 70;
+$h1-size: 44;
+$h1-line-height: 60;
 
 $h2-size: 38;
 $h2-line-height: 40;
@@ -22,8 +24,10 @@ $h5-line-height: 20;
 $h6-size: 14;
 $h6-line-height: 20;
 
-$smaller-size: 14;
+$smaller-size: 16;
 $smaller-line-height: 20;
 
-$smallest-size: 12;
+$smallest-size: 14;
 $smallest-line-height: 20;
+
+$btn-floating-icon-size: 24;
