--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -26,6 +26,7 @@
 @import './ui/lists';
 @import './ui/panel';
 @import './ui/typography';
+@import './ui/tool-toggles';
 @import './ui/form-inputs';
 
 // LAYOUT
