--- a/app/assets/stylesheets/tenon/ui/panel.scss
+++ b/app/assets/stylesheets/tenon/ui/panel.scss
@@ -11,4 +11,8 @@
     right: $default-spacing;
     top: -$btn-floating-size / 2;
   }
+
+  &.with-btn-floating {
+    top: $btn-floating-size / 2;
+  }
 }
