--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -12,6 +12,8 @@ $off-white: #f9f9f9;
 $cobalt: #12111a;
 $orange: #ff6f39;
 $blue: #199eff;
+$blue-alt: #0177ca;
+$green: #39ffa5;
 
 // Reusable colors
 $client-color: $orange;
@@ -41,6 +43,8 @@ $button-comp-bg-color: $comp-color;
 $button-comp-fg-color: $white;
 $btn-floating-bg-color: $orange;
 $btn-floating-fg-color: $white;
+$tool-toggle-bg-color: $green;
+$tool-toggle-fg-color: $white;
 
 // Main Nav
 $main-nav-bg-color: $light-grey;
