--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -4,6 +4,7 @@ $util-nav-height: 50px;
 $main-nav-width: 180px;
 $default-border-radius: 4px;
 $btn-floating-size: 55px;
+$tool-toggle-size: 32px;
 
 // Typography
 $h1-size: 44;
@@ -31,3 +32,4 @@ $smallest-size: 14;
 $smallest-line-height: 20;
 
 $btn-floating-icon-size: 24;
+$tool-toggle-icon-size: 18;
