--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -21,6 +21,7 @@
 
 // UI ELEMENTS
 @import './ui/burger';
+@import './ui/breadcrumbs';
 @import './ui/btn';
 @import './ui/btn-floating';
 @import './ui/lists';
