--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -13,7 +13,7 @@ $cobalt: #12111a;
 $orange: #ff6f39;
 $blue: #199eff;
 $blue-alt: #0177ca;
-$green: #39ffa5;
+$green: #0aff90;
 
 // Reusable colors
 $client-color: $orange;
