--- a/app/assets/stylesheets/tenon/ui/form-inputs.scss
+++ b/app/assets/stylesheets/tenon/ui/form-inputs.scss
@@ -38,8 +38,7 @@ form {
   }
 
   label {
-    @include font-size-smaller;
-    text-transform: uppercase;
+    @include font-size-smallest;
     color: $label-color;
   }
 
