--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -43,7 +43,7 @@ $button-comp-bg-color: $comp-color;
 $button-comp-fg-color: $white;
 $btn-floating-bg-color: $orange;
 $btn-floating-fg-color: $white;
-$tool-toggle-bg-color: $green;
+$tool-toggle-bg-color: $blue-alt;
 $tool-toggle-fg-color: $white;
 
 // Main Nav
