--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -23,6 +23,7 @@ $highlight-color: $med-grey;
 
 // Text colors
 $primary-text-color: $slate;
+$light-text-color: $dark-grey;
 $body-text-color: $black;
 $link-color: $primary-color;
 $label-color: #162433;
@@ -30,6 +31,7 @@ $label-color: #162433;
 // Misc.
 $body-bg-color: $light-grey;
 $panel-bg-color: $white;
+$contrast-bg-color: $grey;
 $light-border-color: $med-grey;
 
 // Sidebar
