--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -36,7 +36,7 @@
 @import './layout/main-nav';
 @import './layout/util-nav';
 @import './layout/record-list';
-//@import './layout/tenon-content/base';
+@import './layout/tenon-content/base';
 @import './layout/tenon-content/library';
 @import './layout/tenon-content/embed-code';
 //@import './layout/tenon-content/popped-out';
