--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -35,6 +35,7 @@
 @import './layout/main';
 @import './layout/main-nav';
 @import './layout/util-nav';
+@import './layout/toolbar';
 @import './layout/record-list';
 @import './layout/tenon-content/base';
 @import './layout/tenon-content/library';
