--- a/app/assets/stylesheets/tenon/ui/btn.scss
+++ b/app/assets/stylesheets/tenon/ui/btn.scss
@@ -1,12 +1,16 @@
 .btn {
   @include default-transition;
   @include z-depth-1;
+  @include font-size-smaller;
   display: inline-block;
+  position: relative;
   border-radius: $default-border-radius;
   border: 0;
-  padding: $default-spacing / 3 $default-spacing;
+  padding: 0 $default-spacing;
+  height: $btn-height;
+  line-height: $btn-height;
   text-align: center;
-  position: relative;
+  text-transform: uppercase;
   color: $button-primary-fg-color;
   background: $button-primary-bg-color;
 
