--- a/app/assets/stylesheets/tenon/variables/colors.scss
+++ b/app/assets/stylesheets/tenon/variables/colors.scss
@@ -5,15 +5,16 @@ $light-grey: #d9d9d9;
 $med-grey: #c2c2c2;
 $grey: #ababab;
 $dark-grey: #878787;
-$slate: #333;
+$slate: #777;
 $black: #333;
 $white: #fff;
-$off-white: #f9f9f9;
+$off-white: #efefef;
 $cobalt: #12111a;
 $orange: #ff6f39;
-$blue: #199eff;
+$blue: #36a0e0;
 $blue-alt: #0177ca;
 $green: #0aff90;
+$red: #d0021b;
 
 // Reusable colors
 $client-color: $orange;
@@ -26,13 +27,14 @@ $primary-text-color: $slate;
 $light-text-color: $dark-grey;
 $body-text-color: $black;
 $link-color: $primary-color;
-$label-color: #162433;
+$label-color: $slate;
 
 // Misc.
-$body-bg-color: $light-grey;
+$body-bg-color: $off-white;
 $panel-bg-color: $white;
 $contrast-bg-color: $grey;
 $light-border-color: $med-grey;
+$required-color: $red;
 
 // Sidebar
 $sidebar-bg-color: #242133;
