--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -1,10 +1,13 @@
 // Block-Level
 $default-spacing: 30px;
 $util-nav-height: 50px;
+$toolbar-height: 70px;
 $main-nav-width: 180px;
+$btn-height: 44px;
 $default-border-radius: 4px;
 $btn-floating-size: 55px;
 $tool-toggle-size: 32px;
+$dot-size: 6px;
 
 // Typography
 $h1-size: 44;
