--- a/app/views/tenon/shared/_seo_fields.html.haml
+++ b/app/views/tenon/shared/_seo_fields.html.haml
@@ -1,6 +1,13 @@
-.form-group
-  = f.text_field :seo_title, :class => "title", :style => "width: 100%;", :label => "Title Tag", :explanation => "This is the title that will show on search engine results and in the title bar of a visitor's browser.  By default, this will use the item's title."
-.form-group
-  = f.text_area :seo_keywords, :label => "META Keywords", :explanation => "These META keywords will be used by some search engines when crawling your site.  Separate keywords with a comma.  Note: Google does not factor in keywords when calculating your rank.  Other search engines may or may not.", :'data-placement' => 'bottom'
-.form-group
-  = f.text_area :seo_description, :label => "META Description", :explanation => "This description will show up on search engines and in some cases will affect your rank.  It should be no longer than 150-160 characters (about the length of a tweet.)"
+.label SEO Tools
+.panel
+  .form-group
+    = f.text_field :seo_title, :class => "title", :style => "width: 100%;", :label => "Title Tag", :explanation => "This is the title that will show on search engine results and in the title bar of a visitor's browser.  By default, this will use the item's title."
+
+  .row
+    .inner6
+      .form-group
+        = f.text_area :seo_keywords, :label => "META Keywords", :explanation => "These META keywords will be used by some search engines when crawling your site.  Separate keywords with a comma.  Note: Google does not factor in keywords when calculating your rank.  Other search engines may or may not.", :'data-placement' => 'bottom'
+
+    .inner6.omega
+      .form-group
+        = f.text_area :seo_description, :label => "META Description", :explanation => "This description will show up on search engines and in some cases will affect your rank.  It should be no longer than 150-160 characters (about the length of a tweet.)"
