--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -1,41 +1,36 @@
 = autosaving_form_for @post do |f|
-  = error_messages_for :post
+  .toolbar
+    = render 'tenon/shared/breadcrumbs'
+    .actions
+      - if can?(:publish, @post)
+        %button.btn.btn-comp.submit{ data: { disable_with: "Please wait..." } } Save
 
-  .inner8
+      - if can?(:create, Tenon::ItemVersion)
+        = save_draft_button(@post)
+        .last-autosave
+
+      = clear_draft_link if params[:version]
+      = load_draft_link(@post)
+      - if @post.persisted?
+        = link_to 'Delete', @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link'
+
+  %main
+    = error_messages_for :post
+
+    .label Details
     .panel
-      %ul.tabs.z-depth-1
-        %li.tab= link_to 'Details', '#details'
-        %li.tab= link_to 'SEO', '#seo'
+      = f.text_field :title, required: true
+      = f.rich_text :excerpt
+      = f.tenon_content :content
 
-      .tab-pane.active#details
-        = f.text_field :title
-        = f.rich_text :excerpt
-        = f.tenon_content :content
-
-      .tab-pane#seo= render "tenon/shared/seo_fields", :f => f
-
-  .inner4.omega
+    .label More Details
     .panel
       - unless @categories.blank?
         = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
 
       = f.collection_select :user_id, @users, :id, :email, include_blank: "(No Author)", label: 'Author'
-
-      = f.check_box :allow_comments, label: 'Allow Comments?'
-
       = f.date_time_picker :publish_at, label: 'Publish Date / Time'
 
+    = render 'tenon/shared/seo_fields', f: f
 
-
-    - if can?(:publish, @post)
-      %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
-
-    - if can?(:create, Tenon::ItemVersion)
-      = save_draft_button(@post)
-      .last-autosave
-
-    = clear_draft_link if params[:version]
-    = load_draft_link(@post)
-    - if @post.persisted?
-      = link_to 'Delete', @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link'
-  .spacer
+    .spacer
