--- a/app/assets/stylesheets/tenon/variables/sizes.scss
+++ b/app/assets/stylesheets/tenon/variables/sizes.scss
@@ -2,7 +2,7 @@
 $default-spacing: 30px;
 $util-nav-height: 50px;
 $toolbar-height: 70px;
-$main-nav-width: 180px;
+$main-nav-width: 244px;
 $btn-height: 44px;
 $default-border-radius: 4px;
 $btn-floating-size: 55px;
@@ -28,10 +28,13 @@ $h5-line-height: 20;
 $h6-size: 14;
 $h6-line-height: 20;
 
-$smaller-size: 16;
+$small-size: 16;
+$small-line-height: 20;
+
+$smaller-size: 14;
 $smaller-line-height: 20;
 
-$smallest-size: 14;
+$smallest-size: 12;
 $smallest-line-height: 20;
 
 $btn-floating-icon-size: 24;
