--- a/app/views/layouts/tenon/application.html.haml
+++ b/app/views/layouts/tenon/application.html.haml
@@ -15,7 +15,10 @@
     = javascript_include_tag 'tenon/tenon_manifest'
 
   %body{data: { controller: params[:controller], action: params[:action] } }
-    .main-nav= render 'tenon/shared/main_nav'
+    .main-nav
+      .current-user
+        = current_user.email
+      = render 'tenon/shared/main_nav'
     = render 'tenon/shared/util_nav'
     .nav-pusher
       = yield
